# farm_agent

./: .gitignore  LICENSE  README.md  __init__.py  agent.py  agent_engine_app.py  agents.py  callbacks.py  deploy.py  env.example  guardrails.py  main.py  memory.py  observability.py  planning.py  processors.py  pyproject.toml  test.py  tools.py  utils.py
prompts/: global_prompt.txt  greeting_prompt.txt  guardrail_prompt.txt  market_prompt.txt  sensor_prompt.txt  weather_prompt.txt
src/: __init__.py
src/config/: __init__.py  config.py  env.example
src/core/: __init__.py  agents.py  callbacks.py  guardrails.py  memory.py  planning.py  processors.py  warmup.py
src/models/: __init__.py  models.py
src/observability/: __init__.py  logging_setup.py  observability.py
src/tools/: __init__.py  tools.py  utils.py
