[project]
name = "farm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.0",
    "google-adk>=1.13.0",
    "lmnr[all]>=0.7.17",
    "loguru>=0.7.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
